base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-service
spec:
 selector:
   app: caddy
 ports:
 - port: 80
   name: http
